--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@
     url(./imgs/background.jpg) no-repeat;
   background-size: 100%;
 }
+
 body {
-  background-image: linear-gradient(to bottom, black, #1c1c1c);
+  background-image: linear-gradient(to bottom, black, #adadad);
 }
 
 .middle {
@@ -26,6 +27,10 @@ body {
   padding: 2rem;
   animation: tracking-in-expand 1s;
   animation-name: tracking-in-expand;
+}
+
+.main h1:hover {
+  cursor: pointer;
 }
 
 .button {
@@ -44,9 +49,53 @@ button {
   display: block;
 }
 
+.edward {
+  display: flex;
+  padding-left: 4rem;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
+.edward img {
+  box-shadow: 10px 10px rgba(247, 127, 7, 0.5);
+}
+
+.box {
+  float: left;
+  width: 350px;
+  height: 360px;
+  background-color: gray;
+  opacity: 0.8;
+  margin-top: 15px;
+  padding: 1.3rem;
+  box-sizing: initial;
+}
+
+.box p {
+  font-family: "Lobster", cursive;
+  color: white;
+  padding-top: 0;
+  padding-bottom: 1rem;
+  font-size: 6vh;
+}
+
+.box h3 {
+  font-size: 3vh;
+  text-align: right;
+  padding-bottom: 0.4rem;
+  font-family: "Cinzel", serif;
+  font-weight: bold;
+}
+
+h4 {
+  font-size: 2.5vh;
+  padding: 1rem;
+  font-family: "Cinzel", serif;
+}
+
 .container {
   text-align: center;
-  padding-top: 10rem;
+  padding-top: 5rem;
   padding-bottom: 3rem;
 }
 
@@ -56,7 +105,8 @@ button {
   color: #cccbc4;
   font-family: "Crimson Text", serif;
   text-align: right;
-  padding: 5rem;
+  margin: 3rem;
+  border-top: white solid 0.3px;
 }
 
 .imgs img {
@@ -69,8 +119,8 @@ button {
   width: 80%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  row-gap: 0.3rem;
-  column-gap: 0.3rem;
+  row-gap: 0.8rem;
+  column-gap: 0.8rem;
 }
 
 .imgs:hover {
@@ -80,6 +130,7 @@ button {
 p {
   color: white;
   padding-top: 1rem;
+  font-family: "Cinzel", serif;
 }
 
 @keyframes fadeIn {
@@ -110,4 +161,42 @@ p {
   -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.61, 0.355, 1)
     both;
   animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+}
+
+@media (max-width: 920px) {
+  .button {
+    padding-top: 2rem;
+    padding-left: 10vh;
+    display: block;
+  }
+
+  .imgs img {
+    width: 100%;
+    height: 200px;
+  }
+}
+
+@media (max-width: 600px) {
+  .main {
+    height: 24rem;
+  }
+
+  .main h1 {
+    font-size: 4rem;
+    padding-bottom: 1rem;
+  }
+
+  .imgs img {
+    width: 100%;
+    height: 200px;
+  }
+
+  .imgs {
+    margin: auto;
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 0.3rem;
+    column-gap: 0.3rem;
+  }
 }
