--- a/style.css
+++ b/style.css
@@ -4,11 +4,24 @@
   box-sizing: border-box;
 }
 
+nav {
+  color: whitesmoke;
+  text-transform: uppercase;
+  padding: 1rem;
+  justify-content: flex-end;
+  display: flex;
+}
+
 .main {
   height: 35rem;
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
     url(./imgs/background.jpg) no-repeat;
   background-size: 100%;
+}
+#main:hover {
+  font-size: 6.5rem;
+
+  transition: 0.6s ease-in;
 }
 
 body {
@@ -20,6 +33,7 @@ body {
 }
 
 .main h1 {
+  display: inline;
   font-size: 6rem;
   font-family: "Abril Fatface", cursive;
   color: whitesmoke;
@@ -27,9 +41,6 @@ body {
   padding: 2rem;
   animation: tracking-in-expand 1s;
   animation-name: tracking-in-expand;
-}
-
-.main h1:hover {
   cursor: pointer;
 }
 
@@ -51,40 +62,51 @@ button {
 
 .edward {
   display: flex;
-  padding-left: 4rem;
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+  padding: 10rem 4rem;
 }
 
 .edward img {
   box-shadow: 10px 10px rgba(247, 127, 7, 0.5);
 }
 
-.box {
-  float: left;
+#box {
+  display: none;
   width: 350px;
-  height: 360px;
+  height: 350px;
   background-color: gray;
   opacity: 0.8;
   margin-top: 15px;
-  padding: 1.3rem;
-  box-sizing: initial;
+  padding: 1.6rem;
+  cursor: pointer;
+  align-items: center;
 }
 
-.box p {
+.intro {
   font-family: "Lobster", cursive;
   color: white;
   padding-top: 0;
   padding-bottom: 1rem;
   font-size: 6vh;
+  align-self: centr;
+  display: flexbox;
+  margin: 3rem;
+  cursor: pointer;
+}
+
+.intro:hover {
+  font-size: 4rem;
+  color: #c4660e;
+  transition: 0.4s ease-in;
 }
 
 .box h3 {
-  font-size: 3vh;
+  font-size: 4vh;
   text-align: right;
   padding-bottom: 0.4rem;
-  font-family: "Cinzel", serif;
-  font-weight: bold;
+  font-family: "Crimson Text", serif;
+  font-weight: bolder;
+  color: black;
+  text-transform: uppercase;
 }
 
 h4 {
@@ -106,7 +128,7 @@ h4 {
   font-family: "Crimson Text", serif;
   text-align: right;
   margin: 3rem;
-  border-top: white solid 0.3px;
+  border-top: 0.1px solid #adadad;
 }
 
 .imgs img {
@@ -170,9 +192,18 @@ p {
     display: block;
   }
 
+  #current {
+    width: 500px;
+  }
   .imgs img {
     width: 100%;
     height: 200px;
+  }
+}
+
+@media (max-width: 700px) {
+  #box {
+    display: none;
   }
 }
 
